the title is add

--- a/JSONplaceholder/comments/comments.html
+++ b/JSONplaceholder/comments/comments.html
@@ -10,6 +10,7 @@
             background: rgb(11, 199, 124);
         }
     </style>
+    <title>Comment</title>
   </head>
   <body>
     <h1 class="text-center text-[30px] font-semibold py-5">Comments</h1>
